# controller/service.go
@@ -19,6 +19,7 @@ func ServiceRegister(group *gin.RouterGroup) {
 	group.GET("/service_list", service.ServiceList)
 	group.GET("/service_delete", service.ServiceDelete)
 	group.POST("/service_add_http", service.ServiceAddHTTP)
+	group.POST("/service_update_http", service.ServiceUpdateHTTP)
 }
 
 // ServiceList godoc
@@ -59,7 +60,7 @@ func (service *ServiceController) ServiceList(c *gin.Context) {
 			middleware.ResponseError(c, 2003, err)
 			return
 		}
-		serviceAddr := "unknow"
+		serviceAddr := "unknown"
 		clusterIp := lib.GetStringConf("base.cluster.cluster_ip")
 		clusterPort := lib.GetStringConf("base.cluster.cluster_port")
 		clusterSSLPort := lib.GetStringConf("base.cluster.cluster_ssl_port")
@@ -159,13 +160,13 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 	}
 
 	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
-		middleware.ResponseError(c, 2004, errors.New("IP列表与权重列表数量不一致"))
+		middleware.ResponseError(c, 2001, errors.New("IP列表与权重列表数量不一致"))
 		return
 	}
 
 	db, err := lib.GetGormPool("default")
 	if err != nil {
-		middleware.ResponseError(c, 2001, err)
+		middleware.ResponseError(c, 2002, err)
 		return
 	}
 
@@ -174,14 +175,14 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
 	if _, err := serviceInfo.First(c, tx, serviceInfo); err == nil {
 		tx.Rollback()
-		middleware.ResponseError(c, 2002, errors.New("服务已经存在"))
+		middleware.ResponseError(c, 2003, errors.New("服务已经存在"))
 		return
 	}
 
 	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
 	if _, err := httpUrl.First(c, tx, httpUrl); err == nil {
 		tx.Rollback()
-		middleware.ResponseError(c, 2003, errors.New("服务接入前缀或域名已存在"))
+		middleware.ResponseError(c, 2004, errors.New("服务接入前缀或域名已存在"))
 		return
 	}
 
@@ -243,4 +244,99 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 
 	tx.Commit()
 	middleware.ResponseSuccess(c, "添加HTTP服务成功")
+}
+
+// ServiceUpdateHTTP godoc
+// @Summary      更新HTTP服务
+// @Description  更新HTTP服务
+// @Tags         服务管理
+// @Accept       json
+// @Produce      json
+// @Param        body	body		dto.ServiceUpdateHTTPInput	true	"body"
+// @Success      200	{object}	middleware.Response{data=string}
+// @Router       /service/service_update_http	[post]
+func (service *ServiceController) ServiceUpdateHTTP(c *gin.Context) {
+	params := &dto.ServiceUpdateHTTPInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
+		middleware.ResponseError(c, 2001, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+
+	db, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	tx := db.Begin()
+
+	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
+	serviceInfo, err = serviceInfo.First(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2003, errors.New("服务不存在"))
+		return
+	}
+
+	serviceDetail, err := serviceInfo.ServiceDetail(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2004, err)
+		return
+	}
+
+	info := serviceDetail.Info
+	info.ServiceDesc = params.ServiceDesc
+	if err := info.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2005, err)
+		return
+	}
+
+	httpRule := serviceDetail.HTTPRule
+	httpRule.NeedHttps = params.NeedHttps
+	httpRule.NeedStripUri = params.NeedStripUri
+	httpRule.NeedWebsocket = params.NeedWebsocket
+	httpRule.UrlRewrite = params.UrlRewrite
+	httpRule.HeaderTransfor = params.HeaderTransfor
+
+	if err := httpRule.Updates(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2006, err)
+		return
+	}
+
+	accessControl := serviceDetail.AccessControl
+	accessControl.OpenAuth = params.OpenAuth
+	accessControl.BlackList = params.BlackList
+	accessControl.WhiteList = params.WhiteList
+	accessControl.ClientIPFlowLimit = params.ClientIpFlowLimit
+	accessControl.ServiceFlowLimit = params.ServiceFlowLimit
+	if err := accessControl.Updates(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2007, err)
+		return
+	}
+
+	loadBalance := serviceDetail.LoadBalance
+	loadBalance.RoundType = params.RoundType
+	loadBalance.IpList = params.IpList
+	loadBalance.WeightList = params.WeightList
+	loadBalance.UpstreamConnectTimeout = params.UpstreamConnectTimeout
+	loadBalance.UpstreamHeaderTimeout = params.UpstreamHeaderTimeout
+	loadBalance.UpstreamIdleTimeout = params.UpstreamIdleTimeout
+	loadBalance.UpstreamMaxIdle = params.UpstreamMaxIdle
+	if err := loadBalance.Updates(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2008, err)
+		return
+	}
+
+	tx.Commit()
+	middleware.ResponseSuccess(c, "更新HTTP服务成功")
 }
